tests/invalid/runtime/io_write_type_binary.pts
import Io;

function main() : void {
    var f = Io.open("io_bin_bad.bin", "wb");
    f.write("abc");
}
